# measurement-plugin-python

./: .env.sample  .env.simulation  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.md.bak  README.md  ThirdPartyNotices.txt  pyproject.toml  sample_meas.py  sample_measurement_client.py  tox.ini
examples/daqmx_analog_input_measurement/: NIDAQmxAnalogInput.serviceconfig  daqmx_analog_input_measurement_measurementUI.serviceconfig  measurement.py  pyproject.toml  start.bat
examples/daqmx_measurement_measurementUI/: DAQmxMeasurement.measui  daqmx_measurement_measurementUI.serviceconfig  measurement.py  pyproject.toml  requirements.txt
examples/dc_measurement_screenUI/: DCMeasurement.measui  dc_measurement_screenUI.serviceconfig  measurement.py  pyproject.toml
examples/game_of_life/: GameOfLife.instudioproj  GameOfLife.sfp  README.md  _helpers.py  game_of_life.measproj  game_of_life.measui  game_of_life.serviceconfig  game_of_life.vi  measurement.py  pyproject.toml  start.bat
examples/long_running_measurement/: LongRunningMeasurement.measproj  LongRunningMeasurement.measui  LongRunningMeasurement.serviceconfig  measurement.py  pyproject.toml
examples/nidaqmx_analog_input/: NIDAQmxAnalogInput.instudioproj  NIDAQmxAnalogInput.measproj  NIDAQmxAnalogInput.measui  NIDAQmxAnalogInput.pinmap  NIDAQmxAnalogInput.seq  NIDAQmxAnalogInput.serviceconfig  NIDAQmxAnalogInput.sfp  NIDAQmxAnalogInput_28Jun2024_1225.txt  NIDAQmxAnalogInput_Report[1 06 15 PM][5 9 2024].xml  NIDAQmxAnalogInput_Report[1 06 15 PM][5 9 2024].xml.html  NIDAQmxAnalogInput_Report[20 08 06][27-06-2024].xml  NIDAQmxAnalogInput_Report[20 08 06][27-06-2024].xml.html  NIDAQmxAnalogInput_Report[20 09 32][27-06-2024].xml  NIDAQmxAnalogInput_Report[20 09 32][27-06-2024].xml.html  NIDAQmxAnalogInput_Report[20 52 11][27-06-2024].xml  NIDAQmxAnalogInput_Report[20 52 11][27-06-2024].xml.html  NIDAQmxAnalogInput_Report[3 51 11 PM][5 9 2024].xml  NIDAQmxAnalogInput_Report[3 51 11 PM][5 9 2024].xml.html  NIDAQmxAnalogInput_Report[3 51 31 PM][5 9 2024].xml  NIDAQmxAnalogInput_Report[3 51 31 PM][5 9 2024].xml.html  NIDAQmxAnalogInput_example.seq  README.md  _helpers.py  _nidaqmx_helpers.py  measurement.py  pyproject.toml  teststand_fixture.py  teststand_nidaqmx.py
examples/nidcpower_source_dc_voltage/: DCMeasurement.measui  NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerSourceDCVoltage.measproj  NIDCPowerSourceDCVoltage.measui  NIDCPowerSourceDCVoltage.seq  NIDCPowerSourceDCVoltage.serviceconfig  NIDCPowerSourceDCVoltage.sfp  NIDCPowerSourceDCVoltageMultiSite.pinmap  NIDCPowerSourceDCVoltageUI.vi  NIDCPowerSourceDCVoltage_example.seq  README.md  _helpers.py  _nidcpower_helpers.py  measurement.py  pyproject.toml  start.bat  teststand_fixture.py  teststand_nidcpower.py  teststand_pin_map.py
examples/nidcpower_source_dc_voltage_with_labview_ui/: NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerSourceDCVoltage.pinmap  NIDCPowerSourceDCVoltage.seq  NIDCPowerSourceDCVoltage.serviceconfig  NIDCPowerSourceDCVoltage.sfp  NIDCPowerSourceDCVoltageUI.vi  README.md  dc_measurement_labviewUI.serviceconfig  measurement.py  pyproject.toml  teststand_fixture.py
examples/nidcpower_source_dc_voltage_with_multiplexer/: .serviceignore  NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerSourceDCVoltage.measproj  NIDCPowerSourceDCVoltage.measui  NIDCPowerSourceDCVoltage.pinmap  NIDCPowerSourceDCVoltage.seq  NIDCPowerSourceDCVoltage.serviceconfig  NIDCPowerSourceDCVoltageUI.vi  NIDCPowerSourceDCVoltageWithMultiplexer.instudioproj  NIDCPowerSourceDCVoltageWithMultiplexer.measproj  NIDCPowerSourceDCVoltageWithMultiplexer.measui  NIDCPowerSourceDCVoltageWithMultiplexer.pinmap  NIDCPowerSourceDCVoltageWithMultiplexer.seq  NIDCPowerSourceDCVoltageWithMultiplexer.serviceconfig  NIDCPowerSourceDCVoltageWithMultiplexer.sfp  NIDCPowerSourceDCVoltageWithMultiplexerUI.vi  NIDCPowerSourceDCVoltageWithMultiplexer_Report[7 36 27 PM][5 6 2024].xml  NIDCPowerSourceDCVoltageWithMultiplexer_Report[7 36 27 PM][5 6 2024].xml.html  NIDCPowerSourceDCVoltageWithMultiplexer_example.seq  README.md  _helpers.py  measurement.py  pyproject.toml  teststand_nidcpower.py  teststand_niswitch.py  teststand_niswitch_multiplexer.py
examples/nidigital_spi/: .serviceignore  NIDigitalSPI.instudioproj  NIDigitalSPI.measproj  NIDigitalSPI.measui  NIDigitalSPI.seq  NIDigitalSPI.serviceconfig  NIDigitalSPI.sfp  NIDigitalSPI_example.seq  PinMap.pinmap  README.md  SPI Example.digiproj  Shmoo.digishmoo  Specifications.specs  _helpers.py  _nidigital_helpers.py  measurement.py  pyproject.toml  teststand_fixture.py  teststand_nidigital.py  teststand_pin_map.py
examples/nidmm_measurement/: .serviceignore  NIDmmMeasurement.instudioproj  NIDmmMeasurement.measproj  NIDmmMeasurement.measui  NIDmmMeasurement.pinmap  NIDmmMeasurement.seq  NIDmmMeasurement.serviceconfig  NIDmmMeasurement.sfp  NIDmmMeasurement_example.seq  README.md  _constants.py  _helpers.py  _nidmm_helpers.py  measurement.py  pyproject.toml  teststand_fixture.py  teststand_nidmm.py  teststand_pin_map.py
examples/nifgen_standard_function/: NIFgenStandardFunction.instudioproj  NIFgenStandardFunction.measproj  NIFgenStandardFunction.measui  NIFgenStandardFunction.pinmap  NIFgenStandardFunction.seq  NIFgenStandardFunction.serviceconfig  NIFgenStandardFunction.sfp  NIFgenStandardFunctionMultiSite.pinmap  NIFgenStandardFunction_example.seq  README.md  _helpers.py  _nifgen_helpers.py  measurement.py  pyproject.toml  teststand_fixture.py  teststand_nifgen.py
examples/niscope_acquire_waveform/: NIScopeAcquireWaveform.instudioproj  NIScopeAcquireWaveform.measproj  NIScopeAcquireWaveform.measui  NIScopeAcquireWaveform.pinmap  (+14 more)
measurement_generator/: measurementUI.measui  pyTemplate.txt  pyproject.toml  template.py
ni_driver_service_generator/: README.md  pyproject.toml
ni_measurement_client/: README.md  main.py  pyproject.toml
ni_measurement_generator/: README.md  conftest.py  poetry.toml  pyproject.toml
ni_measurementlink_generator/: README.md  conftest.py  pyproject.toml
(+1403 files in other folders)
