[tool.black]
extend_exclude = '_pb2(_grpc)?\.(py|pyi)$|ni_measurementlink_generator/'
line-length = 100

[tool.ni-python-styleguide]
extend_exclude = '*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi,ni_measurementlink_generator/'

[tool.poetry]
name = "ni_measurementlink_service"
version = "1.2.0-dev2"
description = "MeasurementLink Support for Python"
authors = ["NI <opensource@ni.com>"]
readme = "README.md" # apply the repo readme to the package as well
repository = "https://github.com/ni/measurementlink-python/"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.8"
# This package includes gRPC stubs that were generated with the version of grpcio-tools specified
# below. Please keep the minimum grpcio version in sync with the grpcio-tools version. Otherwise,
# the generated gRPC stubs may not work with the minimum grpcio version.
grpcio = "^1.49.1"
protobuf = "^4.21"
pywin32 = {version = ">=303", platform = "win32"}
deprecation = ">=2.1"
# https://github.com/microsoft/tracelogging/issues/58 - traceloggingdynamic raises TypeError with Python 3.8
traceloggingdynamic = {version = ">=1.0", platform = "win32", python = "^3.9"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
ni-python-styleguide = ">=0.4.1"
# When you update the grpcio-tools version, you should update the minimum grpcio version
# and regenerate gRPC stubs.
grpcio-tools = "1.49.1"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.0"
mypy = ">=1.0"
mypy-protobuf = ">=3.4"
types-protobuf = "^4.21"
types-pkg-resources = "*"
types-pywin32 = {version = ">=304", platform = "win32"}
grpc-stubs = "^1.53"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^1.8.4"
m2r2 = "^0.3.2"
toml = "^0.10.2"
tomlkit = "^0.11.0"
sphinx-click = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules --strict-markers"
filterwarnings = ["always::ImportWarning", "always::ResourceWarning"]
testpaths = ["tests"]
markers = [
  "service_class: specifies which test service to use.",
]

[tool.mypy]
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  # https://github.com/briancurtin/deprecation/issues/56 - Add type information (PEP 561)
  "deprecation.*",
  "grpc.framework.foundation.*",
  # https://github.com/microsoft/tracelogging/issues/57 - Python traceloggingdynamic package is missing py.typed marker file
  "traceloggingdynamic",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The tests are not yet ready for --disallow-untyped-defs (or even --disallow-incomplete-defs)
module = ["tests.*"]
check_untyped_defs = true
disallow_untyped_defs = false