[tool.poetry]
name = "measurement_generator"
version = "0.1.0"
description = "Generates a template measurement based on command line arguments."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
