[tool.poetry]
name = "ni_measurement_generator"
version = "0.1.0"
description = "A utility for generating Python measurement service projects that use the ni_measurement_service"
authors = ["NI <opensource@ni.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = "^8.1.3"
ni-python-styleguide = "^0.1.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
