[tool.poetry]
name = "ni_measurement_generator"
version = "0.11.1"
description = "MeasurementLink Code Generator for Python"
authors = ["NI <opensource@ni.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ni-python-styleguide = ">=0.1.9"
mypy = "^0.961"

[tool.poetry.scripts]
ni-measurement-generator = "ni_measurement_generator.template:create_measurement"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
