[tool.poetry]
name = "ni_measurementlink_generator"
version = "1.4.0"
description = "MeasurementLink Code Generator for Python"
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
repository = "https://github.com/ni/measurementlink-python/"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = ">=8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-cov = ">=3.0.0"
ni-python-styleguide = ">=0.4.1"
mypy = ">=1.0"

[tool.poetry.scripts]
ni-measurementlink-generator = "ni_measurementlink_generator.template:create_measurement"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "mako.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore tests/test_assets --strict-markers"
filterwarnings = ["always::ImportWarning", "always::ResourceWarning"]
testpaths = ["tests"]
