[tool.poetry]
name = "daqmx_analog_input_measurement_measurementUI"
version = "0.5.0"
description = "DAQmx Analog Input Example Measurement"
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidaqmx = ">=0.6.3"
ni-measurement-service = "*"
click = ">=7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
