[tool.poetry]
name = "daqmx_measurement_measurementUI"
version = "0.5.0"
description = "Example Measurement that performs operations with DAQmx Instrument. Linked to Measurement UI."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
ni-measurement-service = "*"
click = ">=7.1.2"
nidaqmx = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
