[tool.poetry]
name = "dc_measurement_screenui"
version = "0.5.0"
description = "Example Measurement that performs operations with DcPower Instrument. Linked to Screen File UI."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidcpower = "1.4.1"
ni-measurement-service = {path = "../../" , develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
