[tool.poetry]
name = "game_of_life"
version = "1.0.0"
package-mode = false
description = "Measurement plug-in example that displays Conway's Game of Life in a graph."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.9"
ni-measurement-plugin-sdk-service = {version = "^2.3.0"}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = ">=0.4.1"
mypy = ">=1.0"
grpc-stubs = "^1.53"
types-protobuf = ">=4.21"
# Uncomment to use prerelease dependencies.
# ni-measurement-plugin-sdk-service = {path = "../../packages/service", develop = true}

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
