[tool.poetry]
name = "nidaqmx_analog_input"
version = "0.5.0"
description = "MeasurementLink example that performs a finite analog input measurement with NI-DAQmx."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidaqmx = { version = ">=0.8.0-dev0", extras = ["grpc"], allow-prereleases = true }
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "*"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# TODO: Comment out once a prerelease is built.
nidaqmx = { git = "https://github.com/ni/nidaqmx-python.git", branch = "master", extras = ["grpc"]}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "ni_measurementlink_service.*", # TODO: remove after 1.0.2 is released with py.typed marker
    "nidaqmx.*",
]
ignore_missing_imports = true
