[tool.poetry]
name = "nidaqmx_analog_input"
version = "0.5.0"
description = "MeasurementLink example that performs a finite analog input measurement with NI-DAQmx."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidaqmx = { version = ">=0.8.0", extras = ["grpc"], allow-prereleases = true }
ni-measurementlink-service = {version = "^1.1.0-dev2", allow-prereleases = true}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# nidaqmx = { git = "https://github.com/ni/nidaqmx-python.git", branch = "master", extras = ["grpc"]}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "nidaqmx.*",
]
ignore_missing_imports = true
