[tool.poetry]
name = "nidcpower_source_dc_voltage"
version = "0.5.0"
description = "MeasurementLink example that sources and measures a DC voltage with an NI SMU. Provides a Measurement UI."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidcpower = ">=1.4.3"
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.dev-dependencies]
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# nidcpower = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nidcpower"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
