[tool.poetry]
name = "nidcpower_source_dc_voltage"
version = "0.5.0"
description = "MeasurementLink example that sources and measures a DC voltage with an NI SMU. Provides a Measurement UI."
authors = ["National Instruments"]
include = ["nidcpower_source_dc_voltage/NIDCPowerSourceDCVoltage*.*"]

[tool.poetry.dependencies]
python = "^3.8"
nidcpower = ">=1.4.3"
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# nidcpower = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nidcpower"}
# ni-measurementlink-service = {path = "../..", develop = true}

[tool.poetry.scripts]
nidcpower_source_dc_voltage = 'nidcpower_source_dc_voltage.measurement:main'

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "hightime.*",
    "ni_measurementlink_service.*", # TODO: remove after 1.0.2 is released with py.typed marker
    "nidcpower.*",
]
ignore_missing_imports = true
