[tool.poetry]
name = "nidcpower_source_dc_voltage_with_multiplexer"
version = "0.5.0"
description = "MeasurementLink example that sources and measures a DC voltage with an NI SMU connected via an NI-SWITCH multiplexer."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidcpower = { version = ">=1.4.4", extras = ["grpc"] }
niswitch = { version = ">=1.4.4", extras = ["grpc"] }
ni-measurementlink-service = {version = "^1.4.0-dev0", allow-prereleases = true}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558
grpcio = "*"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = ">=0.4.1"
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# nidcpower = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nidcpower", extras = ["grpc"] }
# niswitch = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/niswitch", extras = ["grpc"] }
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "hightime.*",
    "nidcpower.*",
    "niswitch.*",
]
ignore_missing_imports = true
