[tool.poetry]
name = "nidigital_spi"
version = "0.5.0"
description = "MeasurementLink example that tests a SPI device using an NI Digital Pattern instrument."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidigital = ">=1.4.4"
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "*"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# nidigital = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nidigital"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "ni_measurementlink_service.*", # TODO: remove after 1.0.2 is released with py.typed marker
    "nidigital.*",
]
ignore_missing_imports = true
