[tool.poetry]
name = "nidigital_spi"
version = "0.5.0"
description = "MeasurementLink example that tests a SPI device using an NI Digital Pattern instrument."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidigital = ">=1.4.4"
ni-measurementlink-service = {version = "^1.1.0"}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# nidigital = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nidigital"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "nidigital.*",
]
ignore_missing_imports = true
