[tool.poetry]
name = "nidmm_measurement"
version = "0.5.0"
description = "MeasurementLink example that performs a measurement using an NI DMM."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nidmm = { version = ">=1.4.4", extras = ["grpc"] }
ni-measurementlink-service = {version = "^1.1.0"}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# nidmm = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nidmm"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "nidmm.*",
]
ignore_missing_imports = true
