[tool.poetry]
name = "nifgen_standard_function"
version = "0.5.0"
description = "MeasurementLink example that generates a standard function waveform using an NI waveform generator."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nifgen = ">=1.4.3"
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.dev-dependencies]
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# nifgen = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nifgen"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
